force-app/main/default/objects/Forrester_SHIR_COMMENTS_VIEW__x/fields/COMMENT_EXT__c.field-meta.xml
<CustomField>
    <fullName>COMMENT_EXT__c</fullName>
    <description>COMMENT_EXT</description>
    <externalDeveloperName>COMMENT_EXT</externalDeveloperName>
    <label>COMMENT_EXT</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>