force-app/main/default/objects/Forrester_SHIR_COMMENTS_VIEW__x/fields/COMMENT_SEQ__c.field-meta.xml
<CustomField>
    <fullName>COMMENT_SEQ__c</fullName>
    <description>COMMENT_SEQ</description>
    <externalDeveloperName>COMMENT_SEQ</externalDeveloperName>
    <label>COMMENT_SEQ</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>