force-app/main/default/objects/Forrester_SHIR_COMMENTS_VIEW__x/fields/COMMENT_TEXT__c.field-meta.xml
<CustomField>
    <fullName>COMMENT_TEXT__c</fullName>
    <description>COMMENT_TEXT</description>
    <externalDeveloperName>COMMENT_TEXT</externalDeveloperName>
    <label>COMMENT_TEXT</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>