force-app/main/default/objects/Forrester_SHIR_COMMENTS_VIEW__x/fields/CONTEXT_NAME__c.field-meta.xml
<CustomField>
    <fullName>CONTEXT_NAME__c</fullName>
    <description>CONTEXT_NAME</description>
    <externalDeveloperName>CONTEXT_NAME</externalDeveloperName>
    <label>CONTEXT_NAME</label>
    <length>30</length>
    <type>Text</type>
</CustomField>