force-app/main/default/objects/Forrester_SHIR_COMMENTS_VIEW__x/fields/ROYALTY_TERM_AGREEMENT_RECID__c.field-meta.xml
<CustomField>
    <fullName>ROYALTY_TERM_AGREEMENT_RECID__c</fullName>
    <description>ROYALTY_TERM_AGREEMENT_RECID</description>
    <externalDeveloperName>ROYALTY_TERM_AGREEMENT_RECID</externalDeveloperName>
    <label>ROYALTY_TERM_AGREEMENT_RECID</label>
    <length>24</length>
    <type>Text</type>
</CustomField>