force-app/main/default/objects/Forrester_SHIR_COMMENTS_VIEW__x/fields/SOURCE_RECID__c.field-meta.xml
<CustomField>
    <fullName>SOURCE_RECID__c</fullName>
    <description>SOURCE_RECID</description>
    <externalDeveloperName>SOURCE_RECID</externalDeveloperName>
    <label>SOURCE_RECID</label>
    <length>24</length>
    <type>Text</type>
</CustomField>