force-app/main/default/objects/Forrester_SHIR_COMMENTS_VIEW__x/fields/TABLE_NAME__c.field-meta.xml
<CustomField>
    <fullName>TABLE_NAME__c</fullName>
    <description>TABLE_NAME</description>
    <externalDeveloperName>TABLE_NAME</externalDeveloperName>
    <label>TABLE_NAME</label>
    <length>30</length>
    <type>Text</type>
</CustomField>