force-app/main/default/objects/Forrester_SHIR_COMMENTS_VIEW__x/fields/UNIQUE_KEY__c.field-meta.xml
<CustomField>
    <fullName>UNIQUE_KEY__c</fullName>
    <description>UNIQUE_KEY</description>
    <externalDeveloperName>UNIQUE_KEY</externalDeveloperName>
    <label>UNIQUE_KEY</label>
    <length>184</length>
    <type>Text</type>
</CustomField>